# AOM

./: .gitignore  __test.py  agent.py  best_roc_auc.py  best_roc_auc_top_3.py  brute_force.json  bruteforce.py  evo.py  evo_logs.json  evo_logs2.json  evo_logs3.json  llm_optimizer.json  llm_optimizer2.json  llmoptimizer.py  logs  logs.json  logs1.json.old  logs_bf.json  logs_test.json  plots.py  plots_optimizer.py  prompts.csv  prompts.xlsx  pyproject.toml  requirements.txt  run.py  score.py  stats.ipynb  stats.py  temp.py  temporary.py  ~$prompts.xlsx
data_titanic/: readme.txt  test.csv  train.csv
logs/: llm_optimizer3.json  llm_optimizer4.json  logs.json
